<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.salesianos.jmpgarcia.polizas.Polizas"
    android:background="#FFFF99"
    android:id="@+id/caja">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titulo"
        android:text="@string/titulo"
        android:textColor="#0070C0"
        android:textSize="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:layout_marginTop="5dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/model"
        android:layout_below="@+id/titulo"
        android:layout_marginTop="5dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/titulo"
        android:id="@+id/color"
        android:layout_below="@+id/model"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:layout_marginLeft="-40dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/red"
            android:id="@+id/red"
            android:textStyle="bold"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/green"
            android:id="@+id/green"
            android:textStyle="bold"
            android:layout_marginLeft="60dp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blue"
            android:id="@+id/blue"
            android:textStyle="bold"
            android:layout_marginLeft="60dp"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preview"
        android:id="@+id/prevText"
        android:layout_below="@+id/color"
        android:layout_alignLeft="@+id/color"
        android:layout_alignStart="@+id/color"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="35dp" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/prevToggle"
        android:layout_alignBottom="@+id/prevText"
        android:layout_toRightOf="@+id/prevText"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="-12dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:id="@+id/imgCar"
        android:layout_below="@+id/prevToggle"
        android:layout_alignLeft="@+id/prevText"
        android:layout_alignStart="@+id/prevText"
        android:layout_marginTop="30dp"
        android:src="@drawable/coches"
        android:layout_marginLeft="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/extras"
        android:id="@+id/extras"
        android:layout_alignLeft="@+id/imgCar"
        android:layout_alignStart="@+id/imgCar"
        android:layout_column="1"
        android:layout_below="@+id/imgCar"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="60dp" />

    <TableLayout
        android:background="#FFC712"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/extras"
        android:layout_alignStart="@+id/extras"
        android:layout_below="@+id/extras"
        android:layout_marginLeft="-65dp"
        android:padding="1dp"
        android:layout_marginTop="3dp"
        android:id="@+id/tableLayout">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFF99"
            android:layout_marginBottom="1dp" >

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aaExtra"
                android:id="@+id/aaExtra"
                android:layout_column="1"
                android:paddingLeft="10dp"
                android:button="@null"
                android:drawableRight="?android:attr/listChoiceIndicatorMultiple" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFF99"
            android:layout_marginBottom="1dp">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acExtra"
                android:id="@+id/acExtra"
                android:layout_column="1"
                android:paddingLeft="10dp"
                android:button="@null"
                android:drawableRight="?android:attr/listChoiceIndicatorMultiple" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFF99"
            android:layout_marginBottom="1dp">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rvExtra"
                android:id="@+id/rvExtra"
                android:layout_column="1"
                android:paddingLeft="10dp"
                android:button="@null"
                android:drawableRight="?android:attr/listChoiceIndicatorMultiple"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFF99">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spExtra"
                android:id="@+id/spExtra"
                android:layout_column="1"
                android:paddingLeft="10dp"
                android:button="@null"
                android:drawableRight="?android:attr/listChoiceIndicatorMultiple" />
        </TableRow>

    </TableLayout>

    <Button
        android:layout_width="110dp"
        android:layout_height="33dp"
        android:text="@string/calculate"
        android:background="#3D79C1"
        android:textColor="#FFFFFF"
        android:id="@+id/calculate"
        android:textStyle="bold"
        android:layout_below="@+id/tableLayout"
        android:layout_alignLeft="@+id/tableLayout"
        android:layout_alignStart="@+id/tableLayout"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="El importe de su vehiculo es 12876€"
        android:id="@+id/textBox"
        android:layout_below="@+id/calculate"
        android:layout_alignLeft="@+id/calculate"
        android:layout_alignStart="@+id/calculate"
        android:textStyle="bold"
        android:textColor="#000000"
        android:background="#DCE6F2"
        android:layout_marginLeft="-50dp"
        android:layout_marginTop="10dp" />

</RelativeLayout>
